Version 0.1 finishing touches fixed bug with pointer not showing in button

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ button {
     color:azure;
     border:2px outset rgb(230, 235, 244);
     font-family: Arial, Helvetica, sans-serif;
-    cursor: default;
+    cursor: pointer;
     border-radius: 12%;
     font-size: 12pt;
     height: 30px;
@@ -218,7 +218,7 @@ span#cont-head.content-heading {
     font-size: 14pt;
     color: #0e3264;
     margin: 20px;
-    cursor: default;
+    cursor: pointer;
    
 }
 span#cont-head.content-heading:hover {
